--- a/index.html
+++ b/index.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <h1>THE GEOMANIST CLUB OF THE UNIVERSE</h1>
-   <title>THE GEOMANIST CLUB OF THE UNIVERSE</title>
+    <h1>"OHMYGOD"</h1>
+   <title>"OHMYGOD"</title>
 </head>
 <body>
-  <h2>From "OHMYGOD"</h2>
+  <h2>A graphic novel about a group of young gods.</h2>
   <h3>
-<p>An alliance of gods from all over the world. &nbsp;A.K.A."Pantheon".</p>
+<p>© <a href="https://www.instagram.com/juice32juice/">Juice ChuyeChen</a>; <a href="https://www.instagram.com/lordlllut/">Lut Sheng</a></p>
+
 </h3>
 <div>
-<p>Officially founded in 1703, this new god organization spans all seven continents and is present in 63 different parts of the world.</p>
-<p>[The following is an excerpt from the stele of Gyak Bramk, &nbsp;the first general president of GCU, in Amdo, Tibet.]<br>
-"In the past, when gods, demons and human co-existed, we were divided by regions due to the lack of information sharing and the weakness of the old gods in different parts of the world, and there were thousands of protoss tribes with vastly different cultures, languages and regions. <br>
-"Through the different versions of myths and legends that circulate around the world, we have a tacit understanding that there must be others outside our own region who share our own powers, 
-<br>"power of the GOD."</p>
-<p>Today, the organization has become the world's largest and most sophisticated new God group, and it continues to recruit the elite of the era. <br>
-Adhering to the belief of inclusiveness, diversity and evolution, it has seven sub-organizations on seven continents, each with its own management and governance system. <br>
-Among them, the largest and most complex sub-organization is it's Asian organization. </p>
+
+
+<p>story summary</p>
+
+<p>"Our story is about the gods."</p>
+<br>It starts with a human high school and a gods' academy.
+<br>The protagonists are not some school idols, but just a few problem students who are involved in the matter of life and death. In this era of confrontation between gods and gods, those teenagers who should have been high school students were forced to experience life and death, best friends turned against each other, isolation and helplessness, and were thrust into the center of the vortex of fate.
+<br>In the face of conspiracy and reality, they have to grow up quickly no matter they're human or gods, take charge of their own affairs, and reclaim the era of their own. </p>
 </div>
  <p> </p>
   <h4>
     <div>
   <ol>
-    <li>The Globel Fire Games</li>
-    <li>Internal Structure</li>
-    <li>Current Staff</li>
-    <li>Big Events</li>
-    <li>Academy</li>
-  </ol>
+    <li>Characters</li>
+    <li>Script</li>
+    <li>Worldview</li>
+    <li>Illustration</li>
+      </ol>
 </div>
 </h4>
-Based on <a href="https://www.instagram.com/juice32juice/">@JUICE</a> and <a href="https://www.instagram.com/lordlllut/">@LUT's</a> graphic novel "OHMYGOD".
+    
 </body>
 </html>
