--- a/index.html
+++ b/index.html
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <h1>"OHMYGOD"</h1>
-   <title>"OHMYGOD"</title>
+<link rel="stylesheet" href="css_1.css">
 </head>
 <body>
-  <h2>A graphic novel about a group of young gods.</h2>
-  <h3>
-<p>© <a href="https://www.instagram.com/juice32juice/">Juice ChuyeChen</a>; <a href="https://www.instagram.com/lordlllut/">Lut Sheng</a></p>
-
+<h1 class="img"><img src="logo3.png.png" alt=""></h1>
+<title>"OHMYGOD"</title>
+<h2 class="xuan A">A&nbsp; graphic novel</h2>
+<h3 class="xuan about"> about a group of young gods.</h3>
+<h3>
+	<p class="Juice">©<a href="https://www.instagram.com/juiceshark_32/" class="Juice">Juice ChuyeChen</a>; <a href="https://www.instagram.com/lordlllut/" class="Juice">Lut Sheng</a></p>
 </h3>
 <div>
-
-
-<p>story summary</p>
-
-<p>"Our story is about the gods."</p>
-<br>It starts with a human high school and a gods' academy.
-<br>The protagonists are not some school idols, but just a few problem students who are involved in the matter of life and death. In this era of confrontation between gods and gods, those teenagers who should have been high school students were forced to experience life and death, best friends turned against each other, isolation and helplessness, and were thrust into the center of the vortex of fate.
-<br>In the face of conspiracy and reality, they have to grow up quickly no matter they're human or gods, take charge of their own affairs, and reclaim the era of their own. </p>
+	<p class="center"><b class="SYNOPSIS">SYNOPSIS</b> <br>
+		<span class="blod Our">"Our story is about the gods."</span> <br>
+		<p class="Arial it">It starts with a human high school and a gods' academy. <br>
+		The protagonists are not some school idols, but just a few problem students who<br> are involved in the matter of life and death.<br><br> 
+            In this era of confrontation between<br> gods and gods, those teenagers who should have been high school students were<br> forced to experience life and death, best friends turned against each other,<br> isolation and helplessness, and were thrust into the center of the vortex of fate. <br>
+	<br>	In the face of conspiracy and reality, they have to grow up quickly no matter they're<br> human or gods, take charge of their own affairs, and reclaim the era of their own. </p></p>
 </div>
- <p> </p>
-  <h4>
-    <div>
-  <ol>
-    <li>Characters</li>
-    <li>Script</li>
-    <li>Worldview</li>
-    <li>Illustration</li>
-      </ol>
-</div>
+<p> </p>
+<h4>
+	<div class="bj">
+		<ul class="ulli">
+			<li class="a1"><u><a href="file:///Users/juice/Documents/GitHub/Interactive/Project%201/Level4/GCU_text_level4_2.html">Organizations</a></u></li>
+			<li><u>Characters</u></li>
+			<li><u>Script</u></li>
+			<li><u>Worldview</u></li>
+			<li><u>Illustration</u></li>
+		</ul>
+	</div>
 </h4>
-    
+	<div class="bq">
+    <h5 class="the3 blod">Based on <a class="red2 xuan" href="https://www.instagram.com/juiceshark_32/">@JUICE</a> and <a class="red2 xuan" href="https://www.instagram.com/lordlllut/">@LUT's</a> graphic novel "<span class="red2 xuan">OHMYGOD</span>".</h5>
+  </div>   
 </body>
 </html>
